--- a/index.html
+++ b/index.html
@@ -95,40 +95,44 @@
                 </section>
             </main>
             <footer>
-                <section>
-                    <h1>Prosko</h1>
-                    <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
-                    <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
-                </section>
-                <section>
-                    <h3>About us</h3>
-                    <ul>
-                        <li><a href="#">Customer Club<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                        <li><a href="#">Privacy Policy<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                        <li><a href="#">Purchase Terms<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                        <li><a href="#">Frequently Asked Questions<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Follow us</h3>
-                    <ul>
-                        <li><i class="fa-brands fa-twitter" style="color: #000000;"></i></li>
-                        <li><i class="fa-brands fa-instagram" style="color: #000000;"></i></li>
-                        <li><i class="fa-brands fa-facebook" style="color: #000000;"></i></li>
-                        <li><i class="fa-brands fa-tiktok" style="color: #000000;"></i></li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Payment Methods</h3>
-                    <ul>
-                        <li><i class="fa-brands fa-paypal" style="color: #000000;"></i></li>
-                        <li><i class="fa-brands fa-stripe" style="color: #000000;"></i></li>
-                        <li><i class="fa-brands fa-cc-visa" style="color: #000000;"></i></li>
-                        <li><i class="fa-brands fa-cc-mastercard" style="color: #000000;"></i></li>
-                    </ul>
-                </section>
-                <button class="cookies"><i class="fa-solid fa-cookie-bite fa-2xl" style="color: #000000;"></i></button>
-                <button class="contact"><i class="fa-solid fa-message fa-2xl" style="color: #000000;"></i></button>
+                <div class="flex-container">
+                    <section class="footer-information">
+                        <h1>Prosko</h1>
+                        <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
+                        <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
+                    </section>
+                    <div class="about-follow-container">
+                        <section class="about-us">
+                            <h3>About us</h3>
+                            <ul>
+                                <li><a href="#">Customer Club</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">Purchase Terms</a></li>
+                                <li><a href="#">Frequently Asked Questions</a></li>
+                            </ul>
+                        </section>
+                        <section class="follow-us">
+                            <h3>Follow us</h3>
+                            <ul class="follow-icons">
+                                <li><i class="fa-brands fa-twitter fa-2xl" style="color: #000000;"></i></li>
+                                <li><i class="fa-brands fa-instagram fa-2xl" style="color: #000000;"></i></li>
+                                <li><i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i></li>
+                                <li><i class="fa-brands fa-tiktok fa-2xl" style="color: #000000;"></i></li>
+                            </ul>
+                        </section>
+                    </div>
+                    <section class="payment">
+                        <h3>Payment Methods</h3>
+                        <ul class="payment-icons">
+                            <li><i class="fa-brands fa-paypal fa-2xl" style="color: #000000;"></i></li>
+                            <li><i class="fa-brands fa-stripe fa-2xl" style="color: #000000;"></i></li>
+                            <li><i class="fa-brands fa-cc-visa fa-2xl" style="color: #000000;"></i></li>
+                            <li><i class="fa-brands fa-cc-mastercard fa-2xl" style="color: #000000;"></i></li>
+                        </ul> 
+                    </section>
+                    <button class="cookies"><i class="fa-solid fa-cookie-bite fa-2xl" style="color: #000000;"></i></button>
+                    <button class="contact"><i class="fa-solid fa-message fa-2xl" style="color: #000000;"></i></button>
+                </div>
             </footer>
         </div>
         <script>
