Finished mobile first

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </article>
                 </section>
                 <section>
-                    <h3>Brands</h3>
+                    <h3 class="h3-brands">Brands</h3>
                     <ul class="brands">
                         <li>
                             <img src="img/adidas-311450_640.jpg" alt="Brand image">
@@ -79,7 +79,7 @@
                     </ul>
                 </section>
                 <section class="products">
-                    <h2>Products</h2>
+                    <h2 class="h2-products">Products</h2>
                     <article class="product-card">
                         <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
                         <h3>Black Velvet</h3>
