--- a/login.html
+++ b/login.html
@@ -32,37 +32,38 @@
                         <li><a href="login.html">Customer club</a></li>
                     </ul>
                 </nav>
-                <section>
-                    <img class="header-image" src="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg" alt="Image of a woman sitting on the ground with her legs crossed">
-                    <span class="header-text">Welcome to ProSko</span>
-                    <a href="produkt.html" class="header-button">See our products &rarr;</a>
-                </section>
             </header>
             <main>
-                <form class="login-container">
-                    <h1>Sign in</h1>
-                    <p>New customer? <a href="#">Create Account</a></p>
-                    <label for="Email">Email*</label>
-                    <input type="text" placeholder="Email" name="Email" required>
-                    <label for="Password">Password*</label>
-                    <input type="password" placeholder="Password" name="Password" required>
-                    <button type="submit">Login</button>
-                    <p><a href="#">Forgot password?</a></p>
-                    <p>Or log in with</p>
-                </form>
-                <i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i>
-                <i class="fa-brands fa-google fa-2xl" style="color: #000000;"></i>
-                <section class="membership-benefits">
-                    <h2>Membership benefits</h2>
-                    <ul>
-                        <li><a href="#">Coupons & discounts<i class="fa-solid fa-arrow-right"></i></a></li>
-                        <li><a href="#">Weekly newsletters<i class="fa-solid fa-arrow-right"></i></a></li>
-                        <li><a href="#">Exclusive access to our podcast<i class="fa-solid fa-arrow-right"></i></a></li>
-                        <li><a href="#">Design your own shoes<i class="fa-solid fa-arrow-right"></i></a></li>
-                        <li><a href="#">Contests<i class="fa-solid fa-arrow-right"></i></a></li>
-                        <li><a href="#">Online courses<i class="fa-solid fa-arrow-right"></i></a></li>
-                    </ul>
+                <section class="login-container">
+                    <form class="login">
+                        <h1 class="h1-sign-in">Sign in</h1>
+                        <p>New customer? <a class="underline" href="#">Create Account</a></p>
+                        <label for="Email">Email*</label>
+                        <input type="text" placeholder="Email" name="Email" required>
+                        <label for="Password">Password*</label>
+                        <input type="password" placeholder="Password" name="Password" required>
+                        <button type="submit">Login</button>
+                        <p><a class="forgot-password" href="#">Forgot password?</a></p>
+                        <p class="align-center">Or log in with</p>
+                    </form>
                 </section>
+                <section class="login-icons">
+                    <i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i>
+                    <i class="fa-brands fa-google fa-2xl" style="color: #000000;"></i>
+                </section>
+                <article class="membership-container">
+                    <section class="membership-benefits">
+                        <h2 class="h2-membership">Membership benefits</h2>
+                        <ul class="ul-benefits">
+                            <li><a href="#">Coupons & discounts</a></li>
+                            <li><a href="#">Weekly newsletters</a></li>
+                            <li><a href="#">Exclusive access to our podcast</a></li>
+                            <li><a href="#">Design your own shoes</a></li>
+                            <li><a href="#">Contests</a></li>
+                            <li><a href="#">Online courses</a></li>
+                        </ul>
+                    </section>
+                </article>
             </main>
             <footer>
                 <div class="flex-container">
